# private-tradingex-seismic

./: .gitignore  FIGMA_DESIGN_SYSTEM.md  FIGMA_SPEC_PRODUCTION.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: app.js  index.html  style.css
frontend-react/: INTEGRATION_GUIDE.md  QUICK_START.md  README.md  index.html
frontend-react/rust-backend-example/: README.md  models.rs
frontend-react/src/app/: App.tsx  routes.tsx
frontend-react/src/app/components/: AuthModal.tsx  Layout.tsx  RialoLogo.tsx
frontend-react/src/app/pages/: ClaimsPage.tsx  DashboardPage.tsx  GetQuotePage.tsx  HomePage.tsx  PayOnRainApp.tsx  PayOnRainAppWithBackend.tsx
frontend-react/src/services/: api.ts
frontend-react/src/styles/: theme.css
prototype/: README.md  keys.json  package-lock.json  package.json  server.js  worker.js
prototype/db/: balances.json  orders.json  settlements.json
prototype/public/: app.js  index.html
